Fixed up "state $x ||= /.../" example a little more.
git-svn-id: http://svn.pugscode.org/pugs@23355 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1063,12 +1063,17 @@ A C<rule> is really short for:
 
 =item *
 
-The Perl 5 C<?...?> syntax (I<match once>) was rarely used and can be
+The Perl 5 C<?...?> syntax (I<succeed once>) was rarely used and can be
 now emulated more cleanly with a state variable:
 
-    (state $x) ||= / pattern /;    # only matches first time
+    $result = do { state $x ||= m/ pattern /; }    # only matches first time
 
-To reset the pattern, simply say C<$x = 0>.
+To reset the pattern, simply say C<$x = 0>.  Though if you want C<$x> visible
+you'd have to avoid using a block:
+
+    $result = state $x ||= m/ pattern /;
+    ...
+    $x = 0;
 
 =back
 
